examples/test/testpolicy14627.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14627
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key36: value21
      key27: value19
      key24: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value39
      podSelector:
        matchLabels:
          key8: value9
